# openpatent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
condensation/: plan.md  us-descriptions-corpus.ipynb
datasets/epo-publication-server/: 0-scraper_epo_pub_server.ipynb  1-coarse-cleaning.ipynb  2-coarse_cleaning.ipynb  3-removing_tail.ipynb  4-exact_dedup.ipynb  5-paragraph_clean.ipynb  6-boilerplate_removal_paragraphs.ipynb  7-boilerplate_sentences.ipynb  coarse_clean_patents.py  coarse_cleaning.ipynb  length_analysis_utils.ipynb  raw_count.py  raw_count_typer.py  scraper_epo_pub_server.ipynb  scraper_epo_pub_server.py  xml-processing.ipynb  xml_investigations.ipynb
datasets/stem-wiki/: interactive_category_mapper.py  wiki-processor-readme.md  wiki_processor.py
datasets/synthetic-test/: config.yaml  steps.md
datasets/us-claims/: explore-downloads.ipynb
datasets/us-descriptions/: Untitled.ipynb  us-descriptions-corpus.ipynb
