[project]
name = "openpatent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.47.0",
    "dataset>=1.6.2",
    "datasketch>=1.6.5",
    "gensim>=4.3.3",
    "jupyter>=1.1.1",
    "lxml>=6.0.1",
    "openai>=1.105.0",
    "retry>=0.9.2",
    "seaborn>=0.13.2",
    "synthetic-data-kit>=0.0.5",
    "tokenizers>=0.22.0",
    "transformers>=4.56.0",
    "vllm>=0.10.1.1",
    "wikipedia-api>=0.8.1",
]
