[project]
name = "openpatent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "lxml>=6.0.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "retry>=0.9.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typer>=0.17.4",
]
